<?xml version="1.0"?>
<package format="3">
  <name>twip_observers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aleons.jo@gmail.com">aleon</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>Eigen3</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>